--- a/register.html
+++ b/register.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
         integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
         crossorigin="anonymous">
-
-    <title>Home</title>
+    <title>Registro</title>
 </head>
 
 <body>
@@ -27,17 +26,15 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                            <a class="nav-link" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/register.html">Registrarse</a>
+                            <a class="nav-link active" href="/register.html">Registrarse</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <div class="nav-link active">
-                                Usuario <button class="btn btn-danger mx-3"><i class="fas fa-sign-out-alt"></i></button>
-                            </div>
+                        <li class="nav-item text-white">
+                            Usuario
                         </li>
                     </ul>
                 </div>
@@ -45,22 +42,9 @@
         </nav>
     </head>
 
-    <div class="row g-0 justify-content-center">
-        <div class="col-5 mt-5 pt-5">
-            <form class="mt-5" novalidate>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" name="email">
-                </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Contraseña</label>
-                    <input type="password" class="form-control" id="password" name="password">
-                </div>
-            </form>
-            <button class="btn btn-primary">Ingresar</button>
-        </div>
+    <div>
+        
     </div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
