--- a/register.html
+++ b/register.html
@@ -34,7 +34,7 @@
                     </ul>
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item text-white">
-                            Usuario
+                            Usuario <button class="btn btn-danger mx-3"><i class="fas fa-sign-out-alt"></i></button>
                         </li>
                     </ul>
                 </div>
@@ -43,7 +43,7 @@
     </head>
 
     <div>
-        
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
