--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a class="nav-link active" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/register.html">Registrarse</a>
+                            <a class="nav-link" href="/register.html">Registrar</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
