--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <input type="password" class="form-control" id="password" name="password">
                 </div>
             </form>
-            <button class="btn btn-primary">Ingresar</button>
+            <button onclick="login()" class="btn btn-primary">Ingresar</button>
         </div>
     </div>
 
@@ -71,6 +71,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
         integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
         crossorigin="anonymous"></script>
+
+    <script src="/js/login.js"></script>
 </body>
 
 </html>
