--- a/register.html
+++ b/register.html
@@ -43,7 +43,11 @@
     </head>
 
     <div>
-
+        <div class="row">
+            <div class="col-md-5">
+                <button class="btn btn-success" onclick="register()">registrar</button>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
@@ -55,6 +59,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
         integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
         crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/js/register.js"></script>
 </body>
 
 </html>
