Se añadio  funciones para loguearse

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
             <form class="mt-5" novalidate>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" name="email">
+                    <input required type="email" class="form-control" id="email" name="email">
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Contraseña</label>
-                    <input type="password" class="form-control" id="password" name="password">
+                    <input required type="password" class="form-control" id="password" name="password">
                 </div>
+                <button onclick="login()" class="btn btn-primary">Ingresar</button>
             </form>
-            <button onclick="login()" class="btn btn-primary">Ingresar</button>
         </div>
     </div>
 
