--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="row g-0 justify-content-center">
         <div class="col-5 mt-5 pt-5">
-            <form class="mt-5" novalidate>
+            <form class="mt-5" id="form" action="" novalidate>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
                     <input required type="email" class="form-control" id="email" name="email">
@@ -56,7 +56,7 @@
                     <label for="password" class="form-label">Contraseña</label>
                     <input required type="password" class="form-control" id="password" name="password">
                 </div>
-                <button onclick="login()" class="btn btn-primary">Ingresar</button>
+                <button type="submit" id="btn" onclick="login()" class="btn btn-primary">Ingresar</button>
             </form>
         </div>
     </div>
