--- a/principal.html
+++ b/principal.html
@@ -79,9 +79,6 @@
 
 							<label for="recipient-name" class="col-form-label">Estado:</label>
 							<select name="estado" type="text" class="form-control" id="estado">
-								<option value="pendiente">Pendiente</option>
-								<option value="enprogreso">En progreso</option>
-								<option value="completado">Completado</option>
 							</select>
 
 							<label for="recipient-name" class="col-form-label">Estimación: </label>
@@ -160,6 +157,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
 		integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
 		crossorigin="anonymous"></script>
+	<script src="/js/tasks.js"></script>
 
 </body>
 
