--- a/register.html
+++ b/register.html
@@ -43,9 +43,24 @@
     </head>
 
     <div>
-        <div class="row">
-            <div class="col-md-5">
-                <button class="btn btn-success" onclick="register()">registrar</button>
+
+        <div class="row g-0 justify-content-center">
+            <div class="col-5 mt-5 pt-5">
+                <form class="mt-5" id="form" action="" novalidate>
+                    <div class="mb-3">
+                        <label for="user" class="form-label">Nombre Usuario</label>
+                        <input required type="text" class="form-control" id="user" name="user">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input required type="email" class="form-control" id="email" name="email">
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Contraseña</label>
+                        <input required type="password" class="form-control" id="password" name="password">
+                    </div>
+                    <button type="submit" id="btn" onclick="register()" class="btn btn-primary">Registrar</button>
+                </form>
             </div>
         </div>
     </div>
