--- a/principal.html
+++ b/principal.html
@@ -27,7 +27,13 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="/">Home</a>
+							<a class="nav-link" aria-current="page" href="/">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/register.html">Registrarse</a>
+						</li>
+						<li class="nav-item active">
+							<a href="/principal.html" class="nav-link">Crear Tarea</a>
 						</li>
 					</ul>
 					<ul class="navbar-nav ms-auto">
