--- a/register.html
+++ b/register.html
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="/register.html">Registrarse</a>
                         </li>
+                        <li class="nav-item">
+                            <a href="/principal.html" class="nav-link">Crear Tarea</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item text-white">
