--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/register.html">Registrar</a>
                         </li>
+                        <li class="nav-item">
+                            <a href="/principal.html" class="nav-link">Crear Tarea</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
