--- a/principal.html
+++ b/principal.html
@@ -81,7 +81,8 @@
 							<textarea name="descripcion" class="form-control" id="hu"></textarea>
 
 							<label for="recipient-name" class="col-form-label">Responsable:</label>
-							<input name="responsable" type="text" class="form-control" id="responsable">
+							<select class="form-control" name="user" id="user">
+							</select>
 
 							<label for="recipient-name" class="col-form-label">Estado:</label>
 							<select name="estado" type="text" class="form-control" id="estado">
