Se incluye  el parametro  prioridad  en HTML Y task  queda pendiente tomar los estados

--- a/principal.html
+++ b/principal.html
@@ -83,6 +83,10 @@
 							<label for="recipient-name" class="col-form-label">Responsable:</label>
 							<select class="form-control" name="user" id="user">
 							</select>
+							
+							<label for="recipient-name" class="col-form-label">Prioridad:</label>
+							<select class="form-control" name="prioridad" id="priority">
+							</select>
 
 							<label for="recipient-name" class="col-form-label">Estado:</label>
 							<select name="estado" type="text" class="form-control" id="estado">
@@ -113,6 +117,7 @@
 						<th scope="col">RESPONSABLE</th>
 						<th scope="col">ESTADO</th>
 						<th scope="col">ESTIMACIÓN</th>
+						<th scope="col">PRIORIDAD</th>
 						<th scope="col">ACCIONES</th>
 					</tr>
 				</thead>
