ajustes reset de form

--- a/principal.html
+++ b/principal.html
@@ -75,7 +75,7 @@
 						<h5 class="modal-title" id="exampleModalLabel"></h5>
 						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 					</div>
-					<form novalidate>
+					<form novalidate id="form">
 						<div class="modal-body">
 							<label for="message-text" class="col-form-label">Descripción Historia de Usuario</label>
 							<textarea name="descripcion" class="form-control" id="hu"></textarea>
