--- a/principal.html
+++ b/principal.html
@@ -106,6 +106,23 @@
 			</div>
 		</div>
 
+		<!--MODAL DELETE-->
+		<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered">
+			  <div class="modal-content">
+				<div class="modal-header">
+				  <h5 class="modal-title" id="exampleModalLabel"></h5>
+				  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">¿Desea eliminar la tarea?</div>
+				<div class="modal-footer">
+				  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+				  <button type="button" onclick="deleteTask()" class="btn btn-danger">Eliminar</button>
+				</div>
+			  </div>
+			</div>
+		  </div>
+
 
 		<!--REGISTROS-->
 		<div class="conteiner table-responsive">
