--- a/principal.html
+++ b/principal.html
@@ -101,13 +101,14 @@
 
 						</div>
 					</form>
-					<button onclick="createTask()" class="btn btn-success">Guardar</button>
+					<button class="ocultar" id="guardar" onclick="createTask()" class="btn btn-success">Guardar</button>
+					<button id="editar" onclick="editTask()" class="btn btn-success">Editar</button>
 				</div>
 			</div>
 		</div>
 
 		<!--MODAL DELETE-->
-		<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<!-- <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered">
 			  <div class="modal-content">
 				<div class="modal-header">
@@ -121,7 +122,7 @@
 				</div>
 			  </div>
 			</div>
-		  </div>
+		  </div> -->
 
 
 		<!--REGISTROS-->
