--- a/principal.html
+++ b/principal.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="/css/styles.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
@@ -56,7 +56,7 @@
 
 	<!--BOTON AGREGAR TAREA-->
 	<div class="container">
-		<button id="btnagregar" type="button" class="btn btn-light" data-bs-toggle="modal"
+		<button onclick="ocultar(false)" id="btnagregar" type="button" class="btn btn-light" data-bs-toggle="modal"
 			data-bs-target="#exampleModal">Agregar Tarea
 			<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
 				class="bi bi-file-earmark-plus" viewBox="0 0 16 16">
@@ -101,28 +101,11 @@
 
 						</div>
 					</form>
-					<button class="ocultar" id="guardar" onclick="createTask()" class="btn btn-success">Guardar</button>
+					<button id="guardar" onclick="createTask()" class="btn btn-success">Guardar</button>
 					<button id="editar" onclick="editTask()" class="btn btn-success">Editar</button>
 				</div>
 			</div>
 		</div>
-
-		<!--MODAL DELETE-->
-		<!-- <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-			<div class="modal-dialog modal-dialog-centered">
-			  <div class="modal-content">
-				<div class="modal-header">
-				  <h5 class="modal-title" id="exampleModalLabel"></h5>
-				  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				</div>
-				<div class="modal-body">¿Desea eliminar la tarea?</div>
-				<div class="modal-footer">
-				  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-				  <button type="button" onclick="deleteTask()" class="btn btn-danger">Eliminar</button>
-				</div>
-			  </div>
-			</div>
-		  </div> -->
 
 
 		<!--REGISTROS-->
