--- a/principal.html
+++ b/principal.html
@@ -101,8 +101,8 @@
 
 						</div>
 					</form>
-					<button id="guardar" onclick="createTask()" class="btn btn-success">Guardar</button>
-					<button id="editar" onclick="editTask()" class="btn btn-success">Editar</button>
+					<button id="guardar" onclick="createTask()" class="btn btn-success" data-bs-dismiss="modal">Guardar</button>
+					<button id="editar" onclick="editTask()" class="btn btn-success" data-bs-dismiss="modal">Editar</button>
 				</div>
 			</div>
 		</div>
